[package]
name = "paramake"
version = "0.1.0"
edition = "2021"
authors = ["Rachel Franks"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version="0.19.6", features = ["lexer"] }

[dependencies]
lalrpop-util = { version="0.19.6", features = ["lexer"] }
regex = "1"
structopt = "0.3.25"
itertools = "0.10.3"
petgraph = "0.6.0"
