[package]
name = "haymaker"
version = "0.1.0"
edition = "2021"
authors = ["Rachel Franks"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version="0.19.6", features = ["lexer"] }

[dependencies]
lalrpop-util = { version="0.19.6", features = ["lexer"] }
regex = "1"
structopt = "0.3.25"
itertools = "0.10.3"
petgraph = "0.6.0"
lazy_static = "1.4.0"
tokio = { version="1.15.0", features = ["full"] }
tokio-stream = "0.1.8"
futures = "0.3.19"
eyre = "0.6.5"
num_cpus = "1.13.1"
tui = "0.16.0"
termion = "1.5.6"
