[package]
name = "haymaker"
version = "0.0.1"
edition = "2021"
authors = ["Rachel Franks <Rachel 💙#9364>"]
license = "MIT OR Apache-2.0"
documentation = "https://github.com/RachelFranks/haymaker"
homepage = "https://github.com/RachelFranks/haymaker"
repository = "https://github.com/RachelFranks/haymaker"
keywords = ["make", "makefile", "build"]
categories = ["command-line-utilities", "development-tools::build-utils"]
readme = "README.md"
description = """
haymaker is a modern make
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version="0.19.6", features = ["lexer"] }

[dependencies]
lalrpop-util = { version="0.19.6", features = ["lexer"] }
regex = "1"
structopt = "0.3.25"
itertools = "0.10.3"
petgraph = "0.6.0"
lazy_static = "1.4.0"
